browser: fix search box layout issues when width narrows
closes #467

--- a/browser/src/app/styles/directives/_ss-search-bar.scss
+++ b/browser/src/app/styles/directives/_ss-search-bar.scss
@@ -35,7 +35,7 @@
     border-top-right-radius: 0px!important;
     border-bottom-right-radius: 0px!important;
     border: none;
-    width: 80%;
+    width: 75%;
     float:left;
   }
 
@@ -196,10 +196,9 @@
     }
 
     .search-wrapper .search-inner input {
-      width: 73%;
+      width: 70%;
       height: 34px;
       padding: 6px 12px;
-      font-size: 14px;
       line-height: 1.42857143;
     }
 
